// generated by openapi-gen-protobuf

syntax = "proto3";

package erda.msp;

option go_package = "github.com/erda-project/erda-proto-go/openapiv1/msp/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

import "common/openapi.proto";
import "common/identity.proto";

message MONITOR_INSTANCES_Request {
    string terminusKey = 1; // generated from path variable: terminusKey. You should change the proto type if necessary.
}
message MONITOR_RUNTIME_Request {
    string runtimeId = 1; // generated from path variable: runtimeId. You should change the proto type if necessary.
}
// generate service from openapi spec: msp
service msp {
    option (erda.common.openapi_service) = {
        service: "msp",
    };

    rpc MONITOR_INSTANCES (MONITOR_INSTANCES_Request) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            get: "/api/monitor/instances/{terminusKey}",
        };
        option (erda.common.openapi) = {
            path: "/api/monitor/instances/{terminusKey}",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "summary: 根据TerminusKey获取monitor实例",
        };
    };
    rpc MONITOR_RUNTIME (MONITOR_RUNTIME_Request) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            get: "/api/tmc/monitor/runtime/{runtimeId}",
        };
        option (erda.common.openapi) = {
            path: "/api/tmc/monitor/runtime/{runtimeId}",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "summary: 获取Runtime信息",
        };
    };
}
